Bug 148400 - Comment font size doesn't scale properly with different zoom-levels (mangled text or really tiny)
Summary: Comment font size doesn't scale properly with different zoom-levels (mangled ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0
Keywords: bibisected, bisected, regression
: 148618 (view as bug list)
Depends on:
Blocks: Font-Rendering
  Show dependency treegraph
 
Reported: 2022-04-05 15:48 UTC by Telesto
Modified: 2022-04-20 14:31 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (8.72 KB, application/vnd.oasis.opendocument.text)
2022-04-05 15:48 UTC, Telesto
Details
Screenshot (78.18 KB, image/jpeg)
2022-04-05 15:49 UTC, Telesto
Details
Bibisect log (10.31 KB, text/plain)
2022-04-08 10:49 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2022-04-05 15:48:00 UTC
Description:
Comment font size doesn't scale properly with different zoom-levels (mangled text or really tiny)

Steps to Reproduce:
1. Open the attached file
2. Zoom in/out

Actual Results:
Mangled text or super tiny text

Expected Results:
As before


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: cf4d5ed026c8799a70432a832a8a707c2e316216
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL Jumbo

Fine with
Version: 7.3.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 7b0aabe71d2455f6f643553a07f1056935cf190f
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2022-04-05 15:48:17 UTC
Created attachment 179327 [details]
Example file
Comment 2 Telesto 2022-04-05 15:49:43 UTC
Created attachment 179328 [details]
Screenshot
Comment 3 Telesto 2022-04-08 10:49:53 UTC
Created attachment 179408 [details]
Bibisect log

Bisected to
author	Luboš Luňák <l.lunak@collabora.com>	2022-03-15 14:07:01 +0100
committer	Luboš Luňák <l.lunak@collabora.com>	2022-03-15 19:42:45 +0100
commit 673a210b73716cf9ceb7b104b38e39987d0515af (patch)
tree ddf839b9bfe1edcbb6aef7ad148db791fe9f3614
parent b633ab7a53aec033ba933c4ebc48a4fbe56d6c4b (diff)
use SalLayoutGlyphsCache in EditEngine/SvxFont (tdf#94677)
Comment 4 Telesto 2022-04-08 10:53:54 UTC
Adding CC: to Luboš Luňák

FWIW: bug isn't confirmed, yet
Comment 5 Aron Budea 2022-04-08 12:25:29 UTC
Confirmed using LO 7.4.0.0.alpha0+ (9f0e19721bb598c75835cfa94f4158085f81288e) / Ubuntu.
Comment 6 Commit Notification 2022-04-12 11:31:59 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3361db2179dfe4ddb017ac59660c26c2acaaac8d

include OutputDevice MapMode in SalLayoutGlyphsCache key (tdf#148400)

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Luboš Luňák 2022-04-20 14:31:01 UTC
*** Bug 148618 has been marked as a duplicate of this bug. ***