include OutputDevice MapMode in SalLayoutGlyphsCache key (tdf#148400)

The mapmode also affects the layout of the glyphs.

Change-Id: I9492bc4d3d9e991ef8ab5dc30ce424e44cbc79f7