include/vcl/glyphitemcache.hxx
@@ -67,6 +67,7 @@ private:
         tools::Long logicWidth;
         VclPtr<const OutputDevice> outputDevice;
         vcl::Font font;
+        MapMode mapMode;
         bool rtl;
         vcl::text::ComplexTextLayoutFlags layoutMode;
         LanguageType digitLanguage;
